paginated repo + friends table